# xcore-protocol

./: .gitignore  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release-publish.yml
compat/: README.md
compat/java-python/: README.md
docs/adr/: ADR-001-protocol-first.md
docs/architecture/: generation-design.md  generation-validation.md  protocol-overview.md  repository-layout.md
docs/migrations/: bootstrap-plan.md  chat-heartbeat-current-to-v1-mapping.md  discord-current-to-v1-mapping.md  maps-current-to-v1-mapping.md  moderation-current-to-v1-mapping.md
docs/policies/: actor-semantics.md  compatibility.md  contribution.md  versioning.md
fixtures/: README.md
fixtures/legacy/: README.md
generators/: __init__.py  __main__.py  cli.py  discovery.py  families.py  java_writer.py  naming.py  python_writer.py
generators/model/: __init__.py  normalized_schema.py  route_model.py
generators/route_descriptors/: __init__.py  core.py  maps.py
java/: README.md
java/core/: README.md
java/jackson/: README.md
java/testkit/: README.md
java/validation/: README.md
python/: README.md
python/tests/: README.md  test_canonical_protocol_fixtures.py  test_chat_fixtures.py  test_discord_fixtures.py  test_envelope_schemas.py  test_generated_chat_models.py  test_generated_discord_models.py  test_generated_maps_models.py  test_generated_moderation_models.py  test_generator_bootstrap.py  test_maps_fixtures.py  (+4 more)
scripts/: README.md  validate-generated-models.py  validate-generation.py
spec/: README.md
(+122 files in other folders)
